--- a/workout-pwa.html
+++ b/workout-pwa.html
@@ -1226,8 +1226,9 @@ color:#c084fc;
             </div>
 			
 			<!-- ✅ LEGENDA PALLINI (NUOVO) -->
-		<div class="bg-darkCard rounded-2xl p-4 shadow-sm mb-6 border border-gray-700/50">
-		   <div class="flex items-start gap-3 mb-3">
+			
+		<div class="bg-darkCard rounded-2xl p-4 shadow-sm mb-6 border border-gray-700/50" style="display: ${localStorage.getItem('hideLegend') === 'true' ? 'none' : 'block'}">
+				<div class="flex items-start gap-3 mb-3">
 			
 			  <div class="flex-1">
 				 
