--- a/workout-pwa.html
+++ b/workout-pwa.html
@@ -1324,7 +1324,7 @@ color:#c084fc;
          
          <h3 class="text-lg font-bold"><i class="fa-solid fa-gear text-5xl mb-3 opacity-90"></i><br/> Impostazioni</h3>
          <p class="text-sm opacity-90 mt-2">
-            <i class="fa-regular fa-envelope"></i>Inserisci i tuoi dati e preferenze per visualizzare statistiche accurate. </a>
+            Inserisci i tuoi dati e preferenze per visualizzare statistiche accurate. </a>
          </p>
       </div>
    </div>
